# hdas

./: .env  .gitignore  .gitmodules  Cargo.toml  Justfile  Makefile  build.zig  configuration.toml  migrate-production.fish  sqlx-data.json  zig.mod
.github/workflows/: main.yml
migrations/: 20220724125122_Initial_schema.sql  20221217220503_initial_schema.sql
src/: Exporter.zig  Handlers.zig  HealthData.zig  cleaner.rs  configuration.rs  db.rs  exporter.rs  health_data.rs  main.rs  main.zig  shutdown.rs  test.zig  web.rs
