[package]
name = "hdas"
description = "Health Data API Server"
authors = ["Vincent Rischmann"]
license = "MIT"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"

log = "0.4"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

clap = { version = "3.2", features = ["cargo"] }

sqlx = { version = "0.6", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "migrate", "macros", "offline"] }

tokio = { version = "1.20", features = ["signal", "macros"] }
axum = { version = "0.6.0-rc.2", default-features = false, features = ["http1"] }
tower-http = { version = "0.3", features = ["trace"] }
http = "0.2"

time = { version = "0.3", features = ["serde", "serde-human-readable", "parsing", "formatting", "macros"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

prometheus = { version = "0.13", features = ["protobuf", "process"] }
