[package]
name = "hdas"
description = "Health Data API Server"
authors = ["Vincent Rischmann"]
license = "MIT"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"

# Observability
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prometheus = { version = "0.13", features = ["protobuf", "process"] }

# Database stuff
sqlx = { version = "0.6", default-features = false, features = ["runtime-tokio-rustls", "postgres", "time", "migrate", "macros", "offline"] }

# HTTP and web stuff
tokio = { version = "1.20", features = ["signal", "macros"] }
axum = { version = "0.6", default-features = false, features = ["tokio", "http1"] }
tower-http = { version = "0.3", features = ["trace"] }
http = "0.2"

# Serialization stuff
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Other stuff
clap = { version = "3.2", features = ["cargo"] }
time = { version = "0.3", features = ["serde", "serde-human-readable", "parsing", "formatting", "macros"] }
secrecy = { version = "0.8", features = ["serde"] }
config = { version = "0.13", default-features = false, features = ["toml"] }
